src/OpenCvSharpExtern/core_Mat.h

CVAPI(uint64) core_Mat_sizeof()
{
    return sizeof(cv::Mat);
}
CVAPI(cv::Mat*) core_Mat_new1()
{
    return new cv::Mat();
}
CVAPI(cv::Mat*) core_Mat_new2(int rows, int cols, int type)
{
    return new cv::Mat(rows, cols, type); 
}
CVAPI(cv::Mat*) core_Mat_new3(int rows, int cols, int type, MyCvScalar scalar)
{
    return new cv::Mat(rows, cols, type, cpp(scalar));
}
CVAPI(cv::Mat*) core_Mat_new4(cv::Mat *mat, cv::Range rowRange, cv::Range colRange)
{
    return new cv::Mat(*mat, rowRange, colRange);
}
CVAPI(cv::Mat*) core_Mat_new5(cv::Mat *mat, cv::Range rowRange)
{
    return new cv::Mat(*mat, rowRange);
}
CVAPI(cv::Mat*) core_Mat_new6(cv::Mat *mat, cv::Range *ranges)
{
    return new cv::Mat(*mat, ranges);
}
CVAPI(cv::Mat*) core_Mat_new7(cv::Mat *mat, MyCvRect roi)
{
    return new cv::Mat(*mat, cpp(roi));
}
CVAPI(cv::Mat*) core_Mat_new8(int rows, int cols, int type, void* data, size_t step)
{
    return new cv::Mat(rows, cols, type, data, step);
}
CVAPI(cv::Mat*) core_Mat_new_FromIplImage(IplImage *img, int copyData)
{
    cv::Size size(img->height, img->width);
    cv::Mat m(size, CV_MAKETYPE(img->depth, img->nChannels), img->imageData, img->widthStep);
    if (copyData)
        return new cv::Mat(m.clone());
    else
        return new cv::Mat(m);
}
CVAPI(cv::Mat*) core_Mat_new_FromCvMat(CvMat *mat, int copyData)
{
    cv::Size size(mat->rows, mat->cols);
    cv::Mat m(size, mat->type, (mat->data).ptr);
    if (copyData)
        return new cv::Mat(m.clone());
    else
        return new cv::Mat(m);
}
CVAPI(void) core_Mat_release(cv::Mat *self)
{
    self->release();
}
CVAPI(void) core_Mat_delete(cv::Mat *self)
{
    delete self;
}